--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "parcel-bundler": "^1.12.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "sass": "^1.28.0"
   }
 }
