--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "sass": "^1.28.0"
+    "sass": "^1.28.0",
+    "topojson": "^3.0.2"
   }
 }
