--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://github.com/akoz002/web-projects#readme",
   "devDependencies": {
     "d3": "^5.16.0",
+    "focus-visible": "^5.2.0",
     "marked": "^1.2.3",
     "parcel-bundler": "^1.12.4",
     "react": "^17.0.1",
